--- a/20240227筆記.ipynb
+++ b/20240227筆記.ipynb
@@ -3320,11 +3320,151 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "address = '台中市'\n",
+        "gps = geocoding(address)\n",
+        "m = folium.Map(gps, zoom_start=16)\n",
+        "folium.Marker(gps, popup=address).add_to(m)\n",
+        "m"
+      ],
       "metadata": {
-        "id": "jYCdChQ4xGRJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 561
+        },
+        "id": "jYCdChQ4xGRJ",
+        "outputId": "c9b22df2-1fe0-49b8-8a4c-725ba83dddb1"
       },
       "id": "jYCdChQ4xGRJ",
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/urllib3/connectionpool.py:1100: InsecureRequestWarning: Unverified HTTPS request is being made to host 'nominatim.openstreetmap.org'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "台中市的經度：24.163162\n",
+            "台中市的緯度：120.6478282\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<folium.folium.Map at 0x7efba99a4790>"
+            ],
+            "text/html": [
+              "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
+              "&lt;html&gt;\n",
+              "&lt;head&gt;\n",
+              "    \n",
+              "    &lt;meta http-equiv=&quot;content-type&quot; content=&quot;text/html; charset=UTF-8&quot; /&gt;\n",
+              "    \n",
+              "        &lt;script&gt;\n",
+              "            L_NO_TOUCH = false;\n",
+              "            L_DISABLE_3D = false;\n",
+              "        &lt;/script&gt;\n",
+              "    \n",
+              "    &lt;style&gt;html, body {width: 100%;height: 100%;margin: 0;padding: 0;}&lt;/style&gt;\n",
+              "    &lt;style&gt;#map {position:absolute;top:0;bottom:0;right:0;left:0;}&lt;/style&gt;\n",
+              "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js&quot;&gt;&lt;/script&gt;\n",
+              "    &lt;script src=&quot;https://code.jquery.com/jquery-1.12.4.min.js&quot;&gt;&lt;/script&gt;\n",
+              "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js&quot;&gt;&lt;/script&gt;\n",
+              "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js&quot;&gt;&lt;/script&gt;\n",
+              "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css&quot;/&gt;\n",
+              "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css&quot;/&gt;\n",
+              "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css&quot;/&gt;\n",
+              "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css&quot;/&gt;\n",
+              "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css&quot;/&gt;\n",
+              "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css&quot;/&gt;\n",
+              "    \n",
+              "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
+              "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
+              "            &lt;style&gt;\n",
+              "                #map_3617fc706b984d414300b8552f1d248b {\n",
+              "                    position: relative;\n",
+              "                    width: 100.0%;\n",
+              "                    height: 100.0%;\n",
+              "                    left: 0.0%;\n",
+              "                    top: 0.0%;\n",
+              "                }\n",
+              "                .leaflet-container { font-size: 1rem; }\n",
+              "            &lt;/style&gt;\n",
+              "        \n",
+              "&lt;/head&gt;\n",
+              "&lt;body&gt;\n",
+              "    \n",
+              "    \n",
+              "            &lt;div class=&quot;folium-map&quot; id=&quot;map_3617fc706b984d414300b8552f1d248b&quot; &gt;&lt;/div&gt;\n",
+              "        \n",
+              "&lt;/body&gt;\n",
+              "&lt;script&gt;\n",
+              "    \n",
+              "    \n",
+              "            var map_3617fc706b984d414300b8552f1d248b = L.map(\n",
+              "                &quot;map_3617fc706b984d414300b8552f1d248b&quot;,\n",
+              "                {\n",
+              "                    center: [24.163162, 120.6478282],\n",
+              "                    crs: L.CRS.EPSG3857,\n",
+              "                    zoom: 16,\n",
+              "                    zoomControl: true,\n",
+              "                    preferCanvas: false,\n",
+              "                }\n",
+              "            );\n",
+              "\n",
+              "            \n",
+              "\n",
+              "        \n",
+              "    \n",
+              "            var tile_layer_9a4f4b64a1f23826d9860c30af992d3a = L.tileLayer(\n",
+              "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
+              "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+              "            ).addTo(map_3617fc706b984d414300b8552f1d248b);\n",
+              "        \n",
+              "    \n",
+              "            var marker_21e6a8d65a9f76c53a1ec3831d3c515d = L.marker(\n",
+              "                [24.163162, 120.6478282],\n",
+              "                {}\n",
+              "            ).addTo(map_3617fc706b984d414300b8552f1d248b);\n",
+              "        \n",
+              "    \n",
+              "        var popup_9ebd3330ca903ccd2cbe0447c2f56ffa = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+              "\n",
+              "        \n",
+              "            \n",
+              "                var html_352f4f621d09e54b41280ceaf05b53f1 = $(`&lt;div id=&quot;html_352f4f621d09e54b41280ceaf05b53f1&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;台中市&lt;/div&gt;`)[0];\n",
+              "                popup_9ebd3330ca903ccd2cbe0447c2f56ffa.setContent(html_352f4f621d09e54b41280ceaf05b53f1);\n",
+              "            \n",
+              "        \n",
+              "\n",
+              "        marker_21e6a8d65a9f76c53a1ec3831d3c515d.bindPopup(popup_9ebd3330ca903ccd2cbe0447c2f56ffa)\n",
+              "        ;\n",
+              "\n",
+              "        \n",
+              "    \n",
+              "&lt;/script&gt;\n",
+              "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 130
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "K_PC2Zpkytuw"
+      },
+      "id": "K_PC2Zpkytuw",
       "execution_count": null,
       "outputs": []
     }
